--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,12 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch Program",
+      "program": "C:/Users/toabi/Desktop/parsertest/test-parser-for-pants/parser.js"
+    },
+    {
       "name": "Run mocha hybrid",
       "type": "node",
       "request": "launch",
